Fixing alignments

--- a/css/styles.css
+++ b/css/styles.css
@@ -326,6 +326,7 @@ filter: invert(75%) sepia(10%) saturate(1296%) hue-rotate(173deg) brightness(94%
     .portfoliocontainer p{
       
       font-size: 16px;
+      margin-left: 8px;
       
     }
 
@@ -422,7 +423,6 @@ filter: invert(75%) sepia(10%) saturate(1296%) hue-rotate(173deg) brightness(94%
       background-color: #8EB8E5;
       margin-bottom: 24px;
       line-height: 6px;
-      margin-left: 24px;
 
     }
 
